[package]
name = "silent-threshold"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5.0", features = [ "html_reports" ] }
ark-std = { version = "0.4.0", features = ["print-trace"] }
ark-ec = { version = "0.4.0" , features = ["parallel"]}
ark-ff = { version = "0.4.0" }
ark-poly = { version = "0.4.0", features = ["parallel"] }
ark-bls12-381 = { version = "0.4.0" }
ark-serialize = { version = "0.4.0" }
sha2 = "0.10.8"
rayon = "1.10.0"

[features]
asm = [ "ark-ff/asm" ]

[profile.dev]
opt-level = 3

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "decryption"
harness = false

[[bench]]
name = "interpolation"
harness = false

[[bench]]
name = "setup"
harness = false
